[tool.poetry]
name = "supplychain_posts"
version = "0.1.0"
description = "Pulls top 3 or 5 posts"
authors = ["Edward Naidoo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
DateTime = "^4.9"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
